Fixed z-indexes for dotted lines

--- a/src/stylesheets/intro.scss
+++ b/src/stylesheets/intro.scss
@@ -12,7 +12,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%) translateZ(1px);
-  z-index: 3;
+  z-index: -z(dotted-lines);
   bottom: -43px;
 }
 
@@ -67,7 +67,8 @@
 .melty {
   position: relative;
   font-size: 87px;
-  z-index: 2;
+  z-index: -z(content);
+  margin-bottom: 30px;
 
   &:before {
     content: "melty";
@@ -76,7 +77,7 @@
     left: 6px;
     color: #f3bd00;
     transform: rotate(1.5deg);
-    z-index: -1;
+    z-index: -1; // relative to parent
   }
 
   @media(min-width: 1024px) {
@@ -92,6 +93,7 @@
 .goodness {
   @extend .melty;
   font-size: 52px;
+  margin-bottom: 0;
 
   &:before {
     content: "goodness";
@@ -110,7 +112,6 @@
   background-color: #ffc600;
   transform-style: preserve-3d;
   transform: translateZ(1px);
-  z-index: 5;
 }
 .logo-sans-stick {
   position: absolute;
@@ -128,7 +129,7 @@
   left: 50%;
   transform: translateX(-50%) translateZ(3px) rotateZ(-27deg);
   height: 70px;
-  z-index: 6;
+  z-index: -z(header);
 }
 .lock-nav {
   position: fixed;
@@ -136,6 +137,7 @@
   left: 0;
   height: 80px;
   background-color: rgb(209,0,0);
+  z-index: -z(header);
   .logo-sans-stick {
     visibility: hidden;
   }
